fix z-indexes

--- a/public/kabbalah/css/tol.scss
+++ b/public/kabbalah/css/tol.scss
@@ -1,6 +1,7 @@
 // Tree of Life
+
 .tol {
-    --width: 200px;
+    --width: clamp(150px, 30vh, 200px);
     --offset: calc(var(--width) * 0.04);
     --half-offset: calc(var(--offset) / 2);
     --height: calc(var(--width) * (9 / 5) + (var(--offset) * 2));
@@ -9,7 +10,7 @@
 
     height: var(--height);
     width: var(--width);
-    background-color: #444;
+    margin: auto;
     position: relative;
 
     .sef,
@@ -35,7 +36,7 @@
         align-items: center;
         justify-content: center;
         font-size: calc(var(--width) / 10);
-        z-index: 4;
+        z-index: 5;
 
         &.center {
             left: var(--center);
@@ -85,6 +86,8 @@
         height: var(--path-height);
         width: var(--path-width);
         background-color: #000;
+        border: 0.5px solid #888;
+        box-sizing: border-box;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -196,7 +199,7 @@
                 &.daleth {
                     width: calc(var(--path-width) * 2);
                     top: calc(var(--sef-dim) / 2 + var(--half-offset));
-                    z-index: 2;
+                    z-index: 3;
                 }
 
                 &.rosh {
@@ -219,7 +222,7 @@
             width: var(--horiz-width);
             left: calc(50% - (var(--horiz-width) / 2));
             transform-origin: center;
-            z-index: 3;
+            z-index: 4;
 
             &.shin {
                 top: calc(var(--sef-dim) * 1.5 + var(--half-offset));
@@ -283,6 +286,7 @@
             --push-text: calc(var(--path-height) * 3);
 
             width: calc(var(--path-width) * 1.75);
+            z-index: 2;
 
             &.ayin {
                 transform: rotate(var(--deg));
